Fix cropping focus in product card

--- a/src/styles/layouts/_product.scss
+++ b/src/styles/layouts/_product.scss
@@ -5,11 +5,11 @@
   &__list {
     padding-block: $space-0;
     display: flex;
+    justify-content: space-between;
     flex-wrap: nowrap;
     gap: $gap-base;
-    max-width: 100vw;
-    padding: $space-0;
-    overflow-x: auto;
+    padding-inline: 0;
+  max-width: 100vw;
 
     @include desktop {
       gap: $gap-xl;
